tests/shouldFail/j040c.c
int f(x)
float x;
{
	return 0;
}
int main(void){
	return f(32);
}
